# winctl

./: Cargo.toml  Makefile  README.md
src/: com_policy_config.rs  main.rs
