[package]
name = "winctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
windows = { version = "*", features = [
	"Devices_Custom",
	"Win32_Devices_Display",
	"Win32_Foundation",
	"Win32_Media_Audio",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_UI_Shell_PropertiesSystem",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
